--- a/test.html
+++ b/test.html
@@ -11,12 +11,41 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <!-- Links -->
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Features</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="#">Pages</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Blog</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Shop</a>
+      </li>
+  </ul>
+  <span class="navbar-text">
+    Navbar text
+  </span>
+
+</nav>
+<br>
+
 <div class="container">
-  <h2>Image</h2>
-  <p>The .img-fluid class makes the image scale nicely to the parent element (resize the browser window to see the effect):</p>
-  <img class="img-fluid" src="img/content.png" alt="Chania" width="460" height="345"> 
-  <code>Hello world this is the code</code>
+  <h3>Navbar Text</h3>
+  <p>Use the .navbar-text class to vertical align any elements inside the navbar that are not links (ensures proper padding).</p>
 </div>
 
 </body>
 </html>
+
+
